src/components/Landing/Landing.module.css
.faq__wrapper {
  padding-top: calc(var(--mantine-spacing-xl) * 2);
  padding-bottom: calc(var(--mantine-spacing-xl) * 2);
  min-height: rem(650px);
}

.faq__title {
  margin-bottom: calc(var(--mantine-spacing-xl) * 1.5);
}

.faq__item {
  border-radius: var(--mantine-radius-md);
  margin-bottom: var(--mantine-spacing-lg);
  border: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
}

.features__title {
  font-size: rem(34px);
  font-weight: 900;

  @media (max-width: $mantine-breakpoint-sm) {
    font-size: rem(24px);
  }
}

.features__description {
  max-width: rem(600px);
  margin: auto;

  &::after {
    content: '';
    display: block;
    background-color: var(--mantine-color-blue-filled);
    width: rem(45px);
    height: rem(2px);
    margin-top: var(--mantine-spacing-sm);
    margin-left: auto;
    margin-right: auto;
  }
}

.features__card {
  border: rem(1px) solid light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-5));
}

.features__cardTitle {
  &::after {
    content: '';
    display: block;
    background-color: var(--mantine-color-blue-filled);
    width: rem(45px);
    height: rem(2px);
    margin-top: var(--mantine-spacing-sm);
  }
}

.hero__wrapper {
  position: relative;
  box-sizing: border-box;
  background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-8));
}

.hero__inner {
  position: relative;
  padding-top: rem(200px);
  padding-bottom: rem(120px);

  @media (max-width: $mantine-breakpoint-sm) {
    padding-bottom: rem(80px);
    padding-top: rem(80px);
  }
}

.hero__title {
  font-family:
    Greycliff CF,
    var(--mantine-font-family);
  font-size: rem(62px);
  font-weight: 900;
  line-height: 1.1;
  margin: 0;
  padding: 0;
  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));

  @media (max-width: $mantine-breakpoint-sm) {
    font-size: rem(42px);
    line-height: 1.2;
  }
}

.hero__description {
  margin-top: var(--mantine-spacing-xl);
  font-size: rem(24px);

  @media (max-width: $mantine-breakpoint-sm) {
    font-size: rem(18px);
  }
}

.hero__controls {
  margin-top: calc(var(--mantine-spacing-xl) * 2);

  @media (max-width: $mantine-breakpoint-sm) {
    margin-top: var(--mantine-spacing-xl);
  }
}

.hero__control {
  height: rem(54px);
  padding-left: rem(38px);
  padding-right: rem(38px);

  @media (max-width: $mantine-breakpoint-sm) {
    height: rem(54px);
    padding-left: rem(18px);
    padding-right: rem(18px);
    flex: 1;
  }
}

.katex__wrapper {
  display: flex;
  align-items: center;
  padding: calc(var(--mantine-spacing-xl) * 2);
  margin: var(--mantine-spacing-md);
  border-radius: var(--mantine-radius-md);
  background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-8));
  border: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-8));

  @media (max-width: $mantine-breakpoint-sm) {
    flex-direction: column;
    padding: var(--mantine-spacing-xl);
  }
}

.katex__body {
  padding-right: calc(var(--mantine-spacing-xl) * 4);

  @media (max-width: $mantine-breakpoint-sm) {
    padding-right: 0;
  }
}

.katex__title {
  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
  font-family:
    Greycliff CF,
    var(--mantine-font-family);
  line-height: 1;
  margin-bottom: var(--mantine-spacing-md);

  @media (max-width: $mantine-breakpoint-sm) {
    line-height: 1.3;
  }
}

.katex__block {
  flex: 2;

  @media (max-width: $mantine-breakpoint-sm) {
    width: 100%;
  }
}

